--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,4 +5,9 @@
   - name: i want to install on ansible ubuntu node
     apt: 
       name: apache2 
-      state: present  
+      state: present 
+
+  - name: i want to start webserver on ansible node   
+    service: 
+      name: apache2
+      state: started 
