--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -2,12 +2,14 @@
 - hosts: all 
   become: yes
   tasks: 
-  - name: i want to install on ansible ubuntu node
+  - name: i want to install on only ansible ubuntu node 
     apt: 
       name: apache2 
       state: present 
+    when: ansible_os_family =="Debian"
 
-  - name: i want to start webserver on ansible node   
+  - name: i want to start webserver on only ansible node   
     service: 
       name: apache2
       state: started 
+    when: ansible_os_family =="Debian" 
